# wasmi

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: bump-version.yml  rust.yml
cli/: Cargo.toml
core/: Cargo.toml
core/src/: host_error.rs  trap.rs
crates/arena/: Cargo.toml
crates/c_api/: Cargo.toml
crates/c_api/artifact/: Cargo.toml
crates/c_api/macro/: Cargo.toml
crates/cli/: Cargo.toml
crates/collections/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: host_error.rs
crates/wasi/: Cargo.toml
crates/wasmi/: Cargo.toml
crates/wasmi/benches/: benches.rs
crates/wasmi/benches/bench/: mod.rs
crates/wasmi/src/: lib.rs  store.rs
crates/wasmi/src/engine/: config.rs  executor.rs  mod.rs
crates/wasmi/src/engine/limits/: engine.rs
crates/wasmi/src/func/: caller.rs  funcref.rs
crates/wasmi/src/module/: builder.rs  mod.rs  parser.rs
crates/wasmi/src/module/parser/: buffered.rs  streaming.rs
crates/wasmi/tests/e2e/v1/: fuel_consumption_mode.rs  fuel_metering.rs  func.rs  host_calls_wasm.rs  resource_limiter.rs  resumable_call.rs
crates/wasmi/tests/spec/: context.rs  error.rs  mod.rs  run.rs
src/: host.rs  runner.rs
validation/: Cargo.toml
wasmi_v1/: Cargo.toml
wasmi_v1/benches/: benches.rs
wasmi_v1/benches/bench/: mod.rs
wasmi_v1/src/: lib.rs  store.rs
wasmi_v1/src/engine/: exec_context.rs
wasmi_v1/src/module/: builder.rs  mod.rs  parser.rs
wasmi_v1/tests/e2e/v1/: func.rs
wasmi_v1/tests/spec/: context.rs  error.rs  mod.rs  run.rs
