[package]
name = "soroban-wasmi_core"
version = "0.16.0-soroban0"
edition = "2021"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stellar/wasmi"
description = "Soroban fork of Parity WebAssembly interpreter"

[dependencies]
memory_units = "0.4.0"
libm = "0.2.1"
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2.8", default-features = false }
downcast-rs = { version = "1.2", default-features = false }

[dev-dependencies]
rand = "0.8.2"

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = [
    "num-rational/std",
    "num-rational/num-bigint-std",
    "num-traits/std",
    "downcast-rs/std",
]
