[package]
name = "soroban-wasmi-validation"
version = "0.4.1"
authors = ["Stellar Development Foundation <info@stellar.org>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stellar/wasmi"
description = "Soroban fork of Parity WebAssembly code validator"

[dependencies]
parity-wasm = { version = "0.42.0", default-features = false }

[dev-dependencies]
assert_matches = "1.1"

[features]
default = ["std"]
std = ["parity-wasm/std"]
