[package]
name = "soroban-wasmi"
version = "0.16.0-soroban0"
edition = "2021"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/stellar/wasmi"
description = "Soroban fork of Parity WebAssembly interpreter"
exclude = [ "tests/*", "benches/*" ]

[dependencies]
wasmparser = { version = "0.90", package = "wasmparser-nostd", default-features = false }
wasmi_core = { package = "soroban-wasmi_core", version = "0.16.0-soroban0", path = "../core", default-features = false }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
wat = "1"
assert_matches = "1.5"
wast = "44.0"
anyhow = "1.0"
criterion = "0.3.5"

[features]
default = ["std"]
# Use `no-default-features` for a `no_std` build.
std = [
    "wasmi_core/std",
    "wasmparser/std",
    "spin/std",
]

[[bench]]
name = "benches"
harness = false
